# gotg

./: .gitignore  CLAUDE.md  LICENSE  README.md  gotg.code-workspace  narrative.md  pyproject.toml
docs/: agent-file-safety.md  architecture.md  guide.md  iteration-17-revised.md  iteration-plans-15-17.md  iterations-9-14.md  refactor-plan.md  tui-manual-test-plan.md
run_history/: conversation-0207acc.jsonl  conversation-2f204d7.jsonl  conversation-3agent-15turn.jsonl  conversation-5c35fd0.jsonl  conversation-637cef9.jsonl  conversation-7c145a7.jsonl  conversation-7c7779d-coach-facilitated.jsonl  conversation-8263954.jsonl  conversation-b5de299-planning-facilitated.jsonl  conversation-d460268.jsonl  conversation-d8ac279.jsonl  conversation-df6a87b.jsonl  debug-0207acc.jsonl  debug-2f204d7.jsonl  debug-3agent-15turn.jsonl  debug-637cef9.jsonl  debug-7c145a7.jsonl  debug-7c7779d-coach-facilitated.jsonl  debug-8263954.jsonl  debug-b5de299-planning-facilitated.jsonl  debug-d460268.jsonl  debug-d8ac279.jsonl  debug-df6a87b.jsonl  groomed-3agent-15turn.md  groomed-7c145a7.md  groomed-8263954.md  groomed-9f225d1-tool-call-planning.md  groomed-b5de299-planning-facilitated.md  grooming-9f225d1-tool-call-debug.jsonl  grooming-9f225d1-tool-call.jsonl  planning-9f225d1-tool-call-debug.jsonl  planning-9f225d1-tool-call.jsonl  tasks-5c35fd0.json  tasks-8263954.json  tasks-d8ac279.json  tasks_raw-8263954.txt
tests/: test_agent.py  test_approvals.py  test_checkpoint.py  test_cli.py  test_config.py  test_context.py  test_conversation.py  test_engine.py  test_fileguard.py  test_groom.py  test_implementation.py  test_model.py  test_policy.py  test_prompts.py  test_scaffold.py  test_session.py  test_session_review.py  test_smoke.py  test_streaming.py  test_tasks.py  test_tools.py  test_tui_app.py  (+17 more)
(+97 files in other folders)
