[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gotg"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["httpx"]

[project.optional-dependencies]
tui = ["textual>=0.80"]

[project.scripts]
gotg = "gotg.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gotg = ["data/*.toml", "tui/*.tcss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
